@@ -8,12 +8,11 @@
   <mass>30</mass>
   <price>120000</price>
   <description>Marketed as a unified system for intercepting missiles and interceptors, the Guardian Interception System is a favourite of merchants and mercenaries alike. Although it lacks the sufficient firepower to efficiently take down torpedoes and other heavy ordinances, it excels at tracking lighter missiles and can even be used to deter small assault craft.</description>
-  <desc_extra>Automatically fires at nearby missiles and interceptors.</desc_extra>
   <gfx_store>placeholder.webp</gfx_store>
   <cpu>-40</cpu>
  </general>
  <specific type="turret bolt">
-  <lua>outfits/pointdefense/pointdefense.lua</lua>
+  <lua>outfits/pointdefense/guardian_interception_system.lua</lua>
   <gfx>laser2M.png</gfx>
   <sound>laser</sound>
   <spfx_shield>ShiS</spfx_shield>
@@ -24,8 +23,8 @@
   <falloff>650</falloff>
   <energy>8</energy>
   <heatup>60</heatup>
-  <trackmin>3600</trackmin>
-  <trackmax>3600</trackmax>
+  <trackmin>0</trackmin>
+  <trackmax>1200</trackmax>
   <damage>
    <type>energy</type>
    <penetrate>10</penetrate>
