@@ -8,12 +8,11 @@
   <mass>60</mass>
   <price>850000</price>
   <description>The Guardian Overseer System is a complete rework of the original Guardian Interception System. Instead of basing itself on weaker laser turrets, the system makes use of specially modified Ripper cannons that allow it to neutralize most ordinances. Although designed for intercepting torpedoes, the targeting system is also efficient at tracking small enemy craft.</description>
-  <desc_extra>Automatically fires at nearby missiles and fighters.</desc_extra>
   <gfx_store>placeholder.webp</gfx_store>
   <cpu>-200</cpu>
  </general>
  <specific type="turret bolt">
-  <lua>outfits/pointdefense/pointdefense.lua</lua>
+  <lua>outfits/pointdefense/guardian_overseer_system.lua</lua>
   <gfx>ripperM.png</gfx>
   <sound>ripper</sound>
   <spfx_shield>ShiS</spfx_shield>
@@ -24,8 +23,8 @@
   <falloff>850</falloff>
   <energy>70</energy>
   <heatup>80</heatup>
-  <trackmin>5000</trackmin>
-  <trackmax>5000</trackmax>
+  <trackmin>0</trackmin>
+  <trackmax>2000</trackmax>
   <damage>
    <type>energy</type>
    <penetrate>34</penetrate>
